# xaicompare

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-examples.txt  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: ci.yml
data/: processing.ipynb
data/eicu/: processing.ipynb
data/eicu/output/: eicu.csv
data/output/: eicu.csv
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/dev/: index.rst
docs/source/examples/: index.rst
examples/: ex0_xgboost.ipynb  ex1_xgboost_small.ipynb  ex2_xgboost.ipynb  ex3_ollama.ipynb  ex3_ollama.py  helpers.py
examples/ex0-xgboost-full/: xgboost.ipynb  xgboost_simple.py
examples/ex1-xgboost-short/: process.ipynb  xgboost_small.ipynb
examples/ex2-xgboost-tab-text/: process.ipynb
expailens/: _version.py  cli.py  runner.py
expailens/adapters/explainers/: explainer_base.py  explainer_shap_tree.py
expailens/adapters/models/: model_sklearn.py
expailens/dashboard/: app.py
expailens/methods/: methodbase.py
models/eicu/llm/: llm_model_shap.ipynb
models/eicu/scikitlearn/: sklearn_model.ipynb
models/medsynth/: example-xg.py  xgboost.ipynb  xgboost_simple.py
models/scikitlearn/: sklearn_model.ipynb
tests/: test_helpers.py  test_runner.py
tests/registry/: test_autodiscover.py
xaicompare/: _version.py  artifacts.py  cli.py  consts.py  helpers.py  runner.py
xaicompare/adapters/explainers/: explainer_base.py  explainer_shap_tree.py
xaicompare/adapters/models/: model_base.py  model_sklearn.py
xaicompare/adapters/viz/: viz_base.py
xaicompare/dashboard/: app.py
xaicompare/registry/: autodiscover.py  model_registry.py  viz_registry.py  xai_registry.py
