[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "xaicompare"
dynamic = ["version"]
description = "xaicompare dashboard and utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Alex Little", email = "alex@alexlittle.net" }
]

dependencies = [
    "pandas",
    "scikit-learn",
    "numpy==2.4.2",
    "shap",
    "joblib",
    "pyarrow",
    "streamlit",
    "PyYAML>=6.0",
]


[project.scripts]
xaicompare-dash = "xaicompare.cli:main"

# Tell setuptools where to find code and how to determine the version
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["xaicompare*"]


# Read version from xaicompare/_version.py
[tool.setuptools.dynamic]
version = { attr = "xaicompare._version.__version__" }



[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
]
examples = [
    "seaborn",
    "matplotlib",
]

